objects/SBQQ__Localization__c.object
<CustomObject>
    <customHelpPage>SBQQ__LocalizationHelp</customHelpPage>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data Packs to identify and update records.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBQQ__APIName__c</fullName>
        <description>The API Name of this content.</description>
        <inlineHelpText>The API Name of this content.</inlineHelpText>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Description__c</fullName>
        <description>To describe where the text is located</description>
        <inlineHelpText>To describe where the text is located</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Label__c</fullName>
        <description>This action’s label in the UI.</description>
        <inlineHelpText>This action’s label in the UI.</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Language__c</fullName>
        <description>The language code for this translation.</description>
        <inlineHelpText>The language code for this translation.</inlineHelpText>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__LineColumn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The line column related to this content.</description>
        <inlineHelpText>The line column related to this content.</inlineHelpText>
        <label>Line Column</label>
        <referenceTo>SBQQ__LineColumn__c</referenceTo>
        <relationshipLabel>Localizations</relationshipLabel>
        <relationshipName>Localizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__LongTextArea__c</fullName>
        <description>This field stores translations for Long Text fields.</description>
        <inlineHelpText>This field stores translations for Long Text fields.</inlineHelpText>
        <label>Long Text Area</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceDimension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Dimension related to this content.</description>
        <inlineHelpText>The Dimension related to this content.</inlineHelpText>
        <label>Price Dimension</label>
        <referenceTo>SBQQ__Dimension__c</referenceTo>
        <relationshipLabel>Localizations</relationshipLabel>
        <relationshipName>Localizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductFeature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product feature related to this content.</description>
        <inlineHelpText>The product feature related to this content.</inlineHelpText>
        <label>Product Feature</label>
        <referenceTo>SBQQ__ProductFeature__c</referenceTo>
        <relationshipLabel>Localizations</relationshipLabel>
        <relationshipName>Localizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product option that generated this line.</description>
        <inlineHelpText>The product option that generated this line.</inlineHelpText>
        <label>Product Option</label>
        <referenceTo>SBQQ__ProductOption__c</referenceTo>
        <relationshipLabel>Localizations</relationshipLabel>
        <relationshipName>Localizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product related to this content.</description>
        <inlineHelpText>The product related to this content.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Localizations</relationshipLabel>
        <relationshipName>Localizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The template to use for this content.</description>
        <inlineHelpText>The template to use for this content.</inlineHelpText>
        <label>Quote Template</label>
        <referenceTo>SBQQ__QuoteTemplate__c</referenceTo>
        <relationshipLabel>Localizations</relationshipLabel>
        <relationshipName>Localizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteTerm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent term for this term.</description>
        <inlineHelpText>The parent term for this term.</inlineHelpText>
        <label>Quote Term</label>
        <referenceTo>SBQQ__QuoteTerm__c</referenceTo>
        <relationshipLabel>Localizations</relationshipLabel>
        <relationshipName>Localizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RichTextArea__c</fullName>
        <description>This field stores translations for Rich Text fields.</description>
        <inlineHelpText>This field stores translations for Rich Text fields.</inlineHelpText>
        <label>Rich Text Area</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SBQQ__TemplateContent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The template content to use for this content.</description>
        <inlineHelpText>The template content to use for this content.</inlineHelpText>
        <label>Template Content</label>
        <referenceTo>SBQQ__TemplateContent__c</referenceTo>
        <relationshipLabel>Localizations</relationshipLabel>
        <relationshipName>Localizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TextArea__c</fullName>
        <description>This field stores translations for Text Area fields.</description>
        <inlineHelpText>This field stores translations for Text Area fields.</inlineHelpText>
        <label>Text Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__Text__c</fullName>
        <description>This field stores translations for Text fields.</description>
        <inlineHelpText>This field stores translations for Text fields.</inlineHelpText>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__UserDefined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate whether this field is user-defined or not.</description>
        <inlineHelpText>To indicate whether this field is user-defined or not.</inlineHelpText>
        <label>User Defined</label>
        <type>Checkbox</type>
    </fields>
    <label>Localization</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__Language__c</columns>
        <columns>SBQQ__Label__c</columns>
        <columns>SBQQ__APIName__c</columns>
        <columns>SBQQ__QuoteTemplate__c</columns>
        <columns>SBQQ__LineColumn__c</columns>
        <columns>SBQQ__Product__c</columns>
        <columns>SBQQ__ProductOption__c</columns>
        <columns>SBQQ__ProductFeature__c</columns>
        <columns>SBQQ__QuoteTerm__c</columns>
        <columns>SBQQ__Text__c</columns>
        <columns>SBQQ__TextArea__c</columns>
        <columns>SBQQ__LongTextArea__c</columns>
        <columns>SBQQ__RichTextArea__c</columns>
        <columns>SBQQ__UserDefined__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>Localization Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Localizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>